src/objects/CTSK_INSP__Field_Statistic__c.object
<CustomObject>
    <description>Use to record statistics about fields using the Clear Task Object Analyzer application</description>
    <fields>
        <fullName>CTSK_INSP__Custom_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the field is a custom, not a standard, field</inlineHelpText>
        <label>Custom Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Default_Value__c</fullName>
        <inlineHelpText>The fields default value, if one is specified</inlineHelpText>
        <label>Default Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Field_Name__c</fullName>
        <inlineHelpText>The field display (not API) name</inlineHelpText>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Field_Type__c</fullName>
        <inlineHelpText>The field type (E.g. Number, Text, Checkbox, etc)</inlineHelpText>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master-Detail Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist (Multi-Select)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll-Up Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area (Long)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area (Rich)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__First_Used_Date__c</fullName>
        <inlineHelpText>Create date of the oldest record that has a non-null value for this field</inlineHelpText>
        <label>First Used Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Last_Used_Date__c</fullName>
        <inlineHelpText>Create date of the newest record that has a non-null value for this field</inlineHelpText>
        <label>Last Used Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Last_Used_Non_Default_Date__c</fullName>
        <inlineHelpText>Create date of the newest record that has a non-null and non-default value for this field</inlineHelpText>
        <label>Last Used Non Default Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Number_Records__c</fullName>
        <inlineHelpText>The number of records in the object that have a non-null value for this field</inlineHelpText>
        <label># Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Object_Statistic__c</fullName>
        <inlineHelpText>Reference the parent object statistic</inlineHelpText>
        <label>Object Statistic</label>
        <referenceTo>CTSK_INSP__Object_Statistic__c</referenceTo>
        <relationshipLabel>Field Statistics</relationshipLabel>
        <relationshipName>Field_Statistics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Records_Non_Default_Value__c</fullName>
        <inlineHelpText>The number of records in the object that have a non-null, non-default  value for this field</inlineHelpText>
        <label># Records Non-Default Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Records_With_Non_Default_Value__c</fullName>
        <formula>CTSK_INSP__Records_Non_Default_Value__c /  CTSK_INSP__Object_Statistic__r.CTSK_INSP__Number_Records__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of fields, excluding non-default values, in this object that are populated as a % of the total number of records in the object</inlineHelpText>
        <label>% Records With Non Default Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__Total_Records__c</fullName>
        <formula>if(  CTSK_INSP__Object_Statistic__r.CTSK_INSP__Number_Records__c  &lt;&gt; 0, CTSK_INSP__Number_Records__c / CTSK_INSP__Object_Statistic__r.CTSK_INSP__Number_Records__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of fields in this object that are populated as a % of the total number of records in the object</inlineHelpText>
        <label>% Total Records</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CTSK_INSP__of_days_since_last_used__c</fullName>
        <formula>TODAY() -  CTSK_INSP__Last_Used_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days since a new record was created where this field had a non-null value.</inlineHelpText>
        <label># of Days Since Last Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Field Statistic</label>
    <nameField>
        <displayFormat>FS-{000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>